--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ h2 span
 /* start home */
 #home
 	{
-		background-image: url(/images/BackGroundMoving2.gif);
+		background-image: url(/images/StartBackgroundPhoto.png);
 		position: relative;
 		background-size: cover;
 		padding-top: 160px;
@@ -226,16 +226,6 @@ h2 span
 		border-color: transparent;
 	}
 
-	.video-bg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: -1;
-		overflow: hidden;
-		object-fit: cover;
-	  }
 .element {
 	height: 60px;
 	font-size: 16px;
@@ -506,14 +496,14 @@ h2 span
 	}
 #contact input[type="submit"]
 	{
-		background: #28a7e9;
+		background: transparent;
 		font-weight: bold;
 		-webkit-transition: all 0.4s ease-in-out;
 		        transition: all 0.4s ease-in-out;
 	}
 #contact input[type="submit"]:hover
 	{
-		background: transparent;
+		background: #28a7e9;
 	}
 #contact address
 	{
