--- a/css/style.css
+++ b/css/style.css
@@ -125,24 +125,10 @@ h2 span
 /* start nagivation */
 .navbar-default
 	{
-		background-color:rgb(241, 241, 241);;
+		background-color:rgba(187, 187, 187, 0.849);;
 		border: none;
 		box-shadow: none;
 		margin: 0 !important;
-	}
-
-.navbar-default	.navbar-brand
-	{
-		font-weight: 200;
-		color: #28A7E9;
-		font-style: italic;
-		font-family: Impact; 
-		font-size: 30px;
-		height: 70px;
-		line-height: 40px;
-		padding: 12px 0px 0px 12px;
-		display: flex;
-		align-items: center;
 	}
 
 	.logo {
@@ -174,64 +160,67 @@ h2 span
 /* end navigation */
 
 /* start home */
-#home
-	{
-		background: url(/images/StartBackgroundPhoto.png);
-		position: relative;
-		background-size: cover;
-		padding-top: 160px;
-		padding-bottom: 100px;
-		min-height: 650px;
-	}
-#home h1
-	{
-		font-weight: 300;
-		font-size: 70px;
-		padding-bottom: 10px;
-	}
-#home h1 span
-	{
-		color: #28a7e9;
-		font-weight: bold;
-	}
-
-#home .col-md-4 {
-		max-width: 100px;
-		height: auto;
-		display: block;
-		margin-left: -30px;
-		width: 200%;
-		max-width: 500px;
-	}
-
-#home .btn
-	{
-		background: transparent;
-		border-radius: 5px;
-		border-width: 2px;
-		border-color: rgb(255, 255, 255);
-		color: #fff;
-		font-size: 16px;
-		font-weight: bold;
-		margin-top: 20px;
-		width: auto;
-		height: 60px;
-		padding-top: 18px;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
-	}
-#home .btn:hover
-	{
-		background: #28a7e9;
-		border-color: transparent;
-	}
-
-.element {
+#home {
+	position: relative;
+	background-size: cover;
+	padding-top: 160px;
+	padding-bottom: 100px;
+	min-height: 650px;
+  }
+  
+  #home h1 {
+	font-weight: 300;
+	font-size: 70px;
+	padding-bottom: 10px;
+	text-align: center;
+	white-space: nowrap;
+	word-break: keep-all;
+  }
+  
+  #home .row {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+  }
+  
+  #home .col-md-7 {
+	text-align: center;
+  }
+  
+  #home h1 span {
+	color: #28a7e9;
+	font-weight: bold;
+  }
+  
+  #home .btn {
+	background: transparent;
+	border-radius: 5px;
+	border-width: 2px;
+	border-color: rgb(255, 255, 255);
+	color: #fff;
+	font-size: 16px;
+	font-weight: bold;
+	margin-top: 20px;
+	width: auto;
+	height: 60px;
+	padding-top: 18px;
+	-webkit-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+  }
+  
+  #home .btn:hover {
+	background: #28a7e9;
+	border-color: transparent;
+  }
+  
+  .element {
 	height: 60px;
 	font-size: 16px;
-}
-
-/* end home */
+	text-align: center;
+  }
+  
+  /* end home */
 
 /* start service */
 #service {
@@ -259,7 +248,6 @@ h2 span
 	text-align: justify;
   }
   
-
   #service .fa {
 	border: 1px solid #fff;
 	border-radius: 2px;
@@ -269,6 +257,9 @@ h2 span
 	height: 100px;
 	line-height: 100px;
 	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
   }
   
   #service h4 {
@@ -724,7 +715,8 @@ h2 span
 /* end 360 media quires */
 
 /* start 768 media quires */
-@media only screen and ( max-width: 767px ) {
+@media only screen and ( max-width: 767px )
+ 	{
 	#home
 		{
 			min-height: 300px;
@@ -733,7 +725,9 @@ h2 span
 		}
 	#home h1
 		{
-			font-size: 52px;
+			font-size: 40px;
+    		white-space: normal;
+    		word-break: break-word;
 		}
 
 	.templatemo-nav {
