--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,12 @@ h2 span
 	padding-bottom: 100px;
 	min-height: 650px;
   }
+
+  #hero .container {
+	display: flex;
+	align-items: center;
+}
+
   
   #hero h1 {
 	font-weight: 300;
@@ -141,15 +147,9 @@ h2 span
 	cursor: default;
   }
   
-  #hero .row {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-  }
-  
   #hero .col-md-7 {
 	text-align: center;
+
   }
   
   #hero h1 span {
@@ -161,7 +161,7 @@ h2 span
 	background: #28a7e9;
 	border-radius: 5px;
 	border-width: 2px;
-	border-color: rgb(255, 255, 255);
+	border-color: rgb(191, 193, 194);
 	color: #fff;
 	font-size: 16px;
 	font-weight: bold;
@@ -184,6 +184,11 @@ h2 span
 	text-align: center;
 	cursor: default;
   }
+
+  #hero .img-fluid {
+	max-width: 100%;
+	height: auto;
+}
   
 /* end hero */
 
