--- a/css/style.css
+++ b/css/style.css
@@ -1,348 +1,370 @@
-body
-	{
- 		background: #303030;
- 		color: #ffffff;
-		font-family: 'Open Sans', sans-serif;
-		font-weight: 300;
-		overflow-x: hidden;
-	}
+body {
+  background: #303030;
+  color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  overflow-x: hidden;
+}
 
 a {
-	color: #47C6F8;
+  color: #47c6f8;
 }
-	
+
 a:hover {
-	color: #0FF;
+  color: #0ff;
 }
 
 /* start h2 */
-h2
-	{
-		text-align: center;
-		font-size: 40px;
-		padding-bottom: 40px;
-	}	
-h2 span
-	{
-		color: #28a7e9;
-		font-weight: bold;
-	}
+h2 {
+  text-align: center;
+  font-size: 40px;
+  padding-bottom: 40px;
+}
+h2 span {
+  color: #28a7e9;
+  font-weight: bold;
+}
 /* end h2 */
 
 /* start about team service portfolio contact */
-#principles #team, #service,
-#portfolio, #contact
-	{
-		padding-top: 60px;
-		padding-bottom: 40px;
-	}
-	
+#principles #team,
+#service,
+#portfolio,
+#contact {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
 /* end about team service portfolio contact */
 
 /* start preloader */
-.preloader
-	{
-		position: fixed;
-  		top: 0;
-  		left: 0;
-  		width: 100%;
-  		height: 100%;
-  		z-index: 99999;
-  		display: -webkit-box;
-  		display: -webkit-flex;
-  		display: -ms-flexbox;
-  		display: flex;
-  		-webkit-flex-flow: row nowrap;
-  		    -ms-flex-flow: row nowrap;
-  		        flex-flow: row nowrap;
-  		-webkit-box-pack: center;
-  		-webkit-justify-content: center;
-  		    -ms-flex-pack: center;
-  		        justify-content: center;
-  		-webkit-box-align: center;
-  		-webkit-align-items: center;
-  		    -ms-flex-align: center;
-  		        align-items: center;
-  		background: none repeat scroll 0 0 #ffffff;
-	}
-.sk-spinner-wave.sk-spinner 
-	{
-  		width: 50px;
-  		height: 30px;
-  		text-align: center;
-  		font-size: 10px; 
-  	}
-.sk-spinner-wave div 
-	{
-  		background-color: #333;
-  		height: 100%;
-  		width: 6px;
-  		display: inline-block;
-         -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
-                 animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
-         
-    }
-.sk-spinner-wave .sk-rect2 
-	{
-          -webkit-animation-delay: -1.1s;
-                  animation-delay: -1.1s; 
-      }
-.sk-spinner-wave .sk-rect3 
-	{
-          -webkit-animation-delay: -1s;
-                  animation-delay: -1s; 
-     }
-.sk-spinner-wave .sk-rect4 
-	{
-          -webkit-animation-delay: -0.9s;
-                  animation-delay: -0.9s;
-     }
-.sk-spinner-wave .sk-rect5 
-	{
-          -webkit-animation-delay: -0.8s;
-                  animation-delay: -0.8s; 
-     }
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: none repeat scroll 0 0 #ffffff;
+}
+.sk-spinner-wave.sk-spinner {
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  font-size: 10px;
+}
+.sk-spinner-wave div {
+  background-color: #333;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+  animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+}
+.sk-spinner-wave .sk-rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+.sk-spinner-wave .sk-rect3 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+.sk-spinner-wave .sk-rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.sk-spinner-wave .sk-rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
 
 @-webkit-keyframes sk-waveStretchDelay {
-  0%, 40%, 100% {
-            -webkit-transform: scaleY(0.4);
-                    transform: scaleY(0.4); }
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+    transform: scaleY(0.4);
+  }
 
   20% {
-            -webkit-transform: scaleY(1);
-                    transform: scaleY(1); } }
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
 
 @keyframes sk-waveStretchDelay {
-  0%, 40%, 100% {
-            -webkit-transform: scaleY(0.4);
-                    transform: scaleY(0.4); }
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+    transform: scaleY(0.4);
+  }
 
   20% {
-            -webkit-transform: scaleY(1);
-                    transform: scaleY(1); } }
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
 /* end preloader */
 
 /* start hero */
 #hero {
-	position: relative;
-	background-size: cover;
-	padding-top: 160px;
-	padding-bottom: 100px;
-	min-height: 650px;
-  }
-
-  #hero .container {
-	display: flex;
-	align-items: center;
+  position: relative;
+  background-size: cover;
+  padding-top: 160px;
+  padding-bottom: 100px;
+  min-height: 650px;
 }
 
-  
-  #hero h1 {
-	font-weight: 300;
-	font-size: 70px;
-	padding-bottom: 10px;
-	text-align: center;
-	white-space: nowrap;
-	word-break: keep-all;
-	cursor: default;
-  }
-  
-  #hero .col-md-7 {
-	text-align: center;
-
-  }
-  
-  #hero h1 span {
-	color: #28a7e9;
-	font-weight: bold;
-  }
-  
-  #hero .btn {
-	background: #28a7e9;
-	border-radius: 5px;
-	border-width: 2px;
-	border-color: rgb(191, 193, 194);
-	color: #fff;
-	font-size: 16px;
-	font-weight: bold;
-	margin-top: 20px;
-	width: auto;
-	height: 60px;
-	padding-top: 18px;
-	-webkit-transition: all 0.4s ease-in-out;
-	transition: all 0.4s ease-in-out;
-  }
-  
-  #hero .btn:hover {
-	background: #195e83;
-	border-color: transparent;
-  }
-  
-  .element {
-	height: 60px;
-	font-size: 16px;
-	text-align: center;
-	cursor: default;
-  }
-
-  #hero .img-fluid {
-	max-width: 100%;
-	height: auto;
+#hero .container {
+  display: flex;
+  align-items: center;
 }
-  
+
+#hero .img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+#hero h1 {
+  font-weight: 300;
+  font-size: 70px;
+  padding-bottom: 10px;
+  text-align: left;
+  white-space: nowrap;
+  word-break: keep-all;
+  cursor: default;
+}
+
+#hero .col-md-7 {
+  text-align: left;
+  border-left: #ffffff;
+  border-width: 10px;
+}
+
+#hero h1 span {
+  color: #28a7e9;
+  font-weight: bold;
+}
+
+.element {
+  height: 60px;
+  font-size: D16px;
+  text-align: left;
+  cursor: default;
+}
+
+#hero .btn {
+  background: #28a7e9;
+  border-radius: 5px;
+  border-width: 2px;
+  border-color: rgb(191, 193, 194);
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 20px;
+  width: auto;
+  height: 60px;
+  padding-top: 18px;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+#hero .btn:hover {
+  background: #195e83;
+  border-color: transparent;
+}
+
+#hero .companies {
+  background-color: #202020a1;
+  border: 1px solid #202020;
+  border-radius: 10px;
+  align-items: flex;
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 10%;
+  padding: 20px;
+  text-align: center;
+}
+
+#hero .companies .grid {
+  row-gap: 10px;
+}
+
 /* end hero */
 
 /* start service */
 #service {
-	text-align: center;
-	background-color: #202020;
-	padding-bottom: 80px;
-  }
-  
-  #service .col-md-4 {
-	padding: 45px;
-	max-height: 440px;
-	overflow: visible;
-	margin-bottom: 1%;
-	-webkit-transition: all 0.4s ease-in-out;
-	transition: all 0.4s ease-in-out;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
+  text-align: center;
+  background-color: #202020;
+  padding-bottom: 80px;
+}
 
-  }
+#service .col-md-4 {
+  padding: 45px;
+  max-height: 440px;
+  overflow: visible;
+  margin-bottom: 1%;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
-  #service h4 {
-	color: #28a7e9;
-	font-weight: 600;
-	padding-top: 10px;
-	padding-bottom: 14px;
-	cursor: default;
-  }
-  
-  #service .col-md-4 p {
-	margin-bottom: 20px;
-	text-align: center;
-	cursor: default;
-  }
-  
-  #service .fa {
-	border: 1px solid #fff;
-	border-radius: 20px;
-	background-color: #333;
-	color: #e9e9e9;
-	font-size: 50px;
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	-webkit-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-  }
+#service h4 {
+  color: #28a7e9;
+  font-weight: 600;
+  padding-top: 10px;
+  padding-bottom: 14px;
+  cursor: default;
+}
 
-  #service .fa:hover {
-	border: 1px solid #fff;
-	border-radius: 20px;
-	background-color: #2c2c2c;
-	color: #63c6ff;
-	font-size: 50px;
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
+#service .col-md-4 p {
+  margin-bottom: 20px;
+  text-align: center;
+  cursor: default;
+  width: 240px;
+}
 
-  /* end service */
+#service .fa {
+  border: 1px solid #fff;
+  border-radius: 20px;
+  background-color: #333;
+  color: #e9e9e9;
+  font-size: 50px;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+#service .fa:hover {
+  border: 1px solid #fff;
+  border-radius: 20px;
+  background-color: #2c2c2c;
+  color: #63c6ff;
+  font-size: 50px;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* end service */
 
 /* start portfolio */
 
 .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
 .slideshow-slide img {
-	width: 100%;
-	height: auto;
-	object-fit: cover;
-  }
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
 
 .slideshow-slide {
-	flex: 0 0 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-  }
+  flex: 0 0 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Hide the images by default */
 .mySlides {
-    display: none;
-	transition: opacity 0.5s;
+  display: none;
+  transition: opacity 0.5s;
 }
 
-.prev, .next {
-	cursor: pointer;
-	position: absolute;
-	top: 50%;
-	width: auto;
-	margin-top: -15px;
-	padding: 16px;
-	color: white;
-	font-weight: bold;
-	font-size: 18px;
-	transition: 0.6s ease;
-	border-radius: 0 3px 3px 0;
-	user-select: none;
-  }
-  
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -15px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
 
-  .next {
-	right: 0;
-	border-radius: 3px 0 0 3px;
-  }
-  
-  .prev:hover, .next:hover {
-	background-color: rgba(255, 255, 255, 0.8);
-  }
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
 
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-	transition: all 0.6s ease;
-	padding-top: 10px;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  transition: all 0.6s ease;
+  padding-top: 10px;
 }
 
-.active, .dot:hover {
-    background-color: #717171;
-	height: 13px;
-	width: 13px;
+.active,
+.dot:hover {
+  background-color: #717171;
+  height: 13px;
+  width: 13px;
 }
 
 /* Fading animation */
 .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @keyframes fade {
-    from { opacity: 0.4; }
-    to { opacity: 1; }
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* end portfolio */
@@ -350,65 +372,73 @@ h2 span
 /* start principles */
 
 #principles {
-	background: #e6e6e6;
-	padding-top: 80px;
-	padding-bottom: 80px;
+  background: #e6e6e6;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
-  
 
 #principles .col-md-12 {
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 }
-  #principles .wow {
-	color: #2A2626;
-  }
 
-  #principles .media-heading-wrapper {
-	padding-bottom: 32px;
-  }
-  
-  #principles .media-heading-wrapper .fa {
-	border: 1px solid #2A2626;
-	background-color: #dddddd;
-	border-radius: 10px;
-	color: #2A2626;
-	font-size: 24px;
-	width: 60px;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	-webkit-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-  }
+#principles .wow {
+  color: #2a2626;
+}
 
-  #principles .media-heading-wrapper .fa:hover {
-	border: 1px solid #2A2626;
-	border-radius: 10px;
-	background-color: #bbbbbb;
-	color: #016faf;
-	font-size: 24px;
-	width: 60px;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
-	margin-right: 20;
-	margin-bottom: 20px;
-  }
-  
-  #principles .media-heading-wrapper h3 {
-	font-size: 18px;
-	font-weight: bold;
-	padding-top: 20px;
-	padding-left: 52px;
-  }
+#principles .media {
+  margin: 0 auto;
+  width: 240px;
+  border-top: 1px solid #9c9c9c4a; /* This sets the border on all four sides */
+  padding: 20px;
+}
 
-  #principles .media-body{
-	font-weight: 400;
-	color: #000000;
-	padding-bottom: 50px;
-  }
+#principles .media-heading-wrapper {
+  padding-bottom: 32px;
+  text-align: left;
+  align-items: center;
+  width: 240px;
+}
+
+#principles .media-heading-wrapper .fa {
+  border: 1px solid #2a2626;
+  background-color: #dddddd;
+  border-radius: 10px;
+  color: #2a2626;
+  font-size: 24px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+#principles .media-heading-wrapper .fa:hover {
+  border: 1px solid #2a2626;
+  border-radius: 10px;
+  background-color: #bbbbbb;
+  color: #016faf;
+  font-size: 24px;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+}
+
+#principles .media-heading-wrapper h3 {
+  font-size: 18px;
+  font-weight: bold;
+  padding-top: 20px;
+  padding-left: 0px;
+  text-align: left;
+}
+
+#principles .media-body {
+  font-weight: 400;
+  color: #000000;
+  padding-bottom: 50px;
+  text-align: left;
+}
 /* end principles */
 
 /* start team */
@@ -416,132 +446,113 @@ h2 span
 /* end team */
 
 /* start contact */
-#contact
-	{
-		background: #202020;
-	}
-#contact .form-control
-	{
-		background-color: #303030;
-		border: 1px solid #7e7e7e;
-		border-radius: 2px;
-		box-shadow: none;
-		color: #fff;
-		margin-top: 6px;
-		margin-bottom: 16px;
-	}
-#contact label
-	{
-		font-weight: 500;
-	}
-#contact input
-	{
-		height: 50px;
-	}
-#contact input[type="submit"]
-	{
-		background: transparent;
-		font-weight: bold;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
-	}
-#contact input[type="submit"]:hover
-	{
-		background: #28a7e9;
-	}
-#contact address
-	{
-		padding-top: 30px;
-	}
-#contact address .address-title
-	{
-		font-weight: bold;
-		font-size: 20px;
-		padding-bottom: 10px;
-	}
-#contact address span
-	{
-		display: block;
-		padding-bottom: 30px;
-	}
-#contact address .fa
-	{
-		border: 1px solid #fff;
-		border-radius: 2px;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		text-align: center;
-		margin-right: 10px;
-		margin-bottom: 10px;
-	}
+#contact {
+  background: #202020;
+}
+#contact .form-control {
+  background-color: #303030;
+  border: 1px solid #7e7e7e;
+  border-radius: 2px;
+  box-shadow: none;
+  color: #fff;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+#contact label {
+  font-weight: 500;
+}
+#contact input {
+  height: 50px;
+}
+#contact input[type="submit"] {
+  background: transparent;
+  font-weight: bold;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+#contact input[type="submit"]:hover {
+  background: #28a7e9;
+}
+#contact address {
+  padding-top: 30px;
+}
+#contact address .address-title {
+  font-weight: bold;
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+#contact address span {
+  display: block;
+  padding-bottom: 30px;
+}
+#contact address .fa {
+  border: 1px solid #fff;
+  border-radius: 2px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
 
-#contact .btn
-	{
-		background: transparent;
-		border-radius: 2px;
-		color: #fff;
-		font-size: 16px;
-		font-weight: bold;
-		margin-top: 20px;
-		width: auto;
-		height: 60px;
-		padding-top: 18px;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
-	}
-#contact .btn:hover
-	{
-		background: #28a7e9;
-		border-color: transparent;
-	}
+#contact .btn {
+  background: transparent;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 20px;
+  width: auto;
+  height: 60px;
+  padding-top: 18px;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+#contact .btn:hover {
+  background: #28a7e9;
+  border-color: transparent;
+}
 /* end contact */
 
 /* start copyright */
-#copyright
-	{
-		padding: 20px;
-	}
-#copyright p
-	{
-		font-weight: 400;
-	}
+#copyright {
+  padding: 20px;
+}
+#copyright p {
+  font-weight: 400;
+}
 /* end copyright */
 
 /* start social icon */
-.social-icon
-	{
-		position: relative;
-		padding: 0;
-		margin: 0;
-	}
-.social-icon h4
-	{
-		display: inline-block;
-		padding-right: 20px;
-	}
-.social-icon li
-	{
-		display: inline-block;
-		list-style: none;
-	}
-.social-icon li a
-	{
-		border: 1px solid #fff;
-		border-radius: 2px;
-		color: #fff;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		text-align: center;
-		text-decoration: none;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
-		margin-right: 10px;
-	}
-.social-icon li a:hover
-	{
-		background: #28a7e9;
-		border-color: transparent;
-	}
+.social-icon {
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+.social-icon h4 {
+  display: inline-block;
+  padding-right: 20px;
+}
+.social-icon li {
+  display: inline-block;
+  list-style: none;
+}
+.social-icon li a {
+  border: 1px solid #fff;
+  border-radius: 2px;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-decoration: none;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  margin-right: 10px;
+}
+.social-icon li a:hover {
+  background: #28a7e9;
+  border-color: transparent;
+}
 /* end social icon */
